; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_context.c_openssl_ctx_get_concrete.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_context.c_openssl_ctx_get_concrete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@default_context_init = common dso_local global i32 0, align 4
@do_default_context_init = common dso_local global i32 0, align 4
@default_context = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @openssl_ctx_get_concrete(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i32, i32* @do_default_context_init, align 4
  %8 = call i32 @RUN_ONCE(i32* @default_context_init, i32 %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %6
  store i32* null, i32** %2, align 8
  br label %15

11:                                               ; preds = %6
  %12 = load i32*, i32** @default_context, align 8
  store i32* %12, i32** %2, align 8
  br label %15

13:                                               ; preds = %1
  %14 = load i32*, i32** %3, align 8
  store i32* %14, i32** %2, align 8
  br label %15

15:                                               ; preds = %13, %11, %10
  %16 = load i32*, i32** %2, align 8
  ret i32* %16
}

declare dso_local i32 @RUN_ONCE(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
